--- a/auth/package.json
+++ b/auth/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "jest": "jest",
     "test": "jest --coverage"
   },
   "keywords": [],
