--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,21 @@ jobs:
     name: SonarQube
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 
+          fetch-depth: 0
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: npm ci
+      
       - name: Test and coverage
-        run: yarn test --coverage
+        run: npm test
+      
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v7
         env:
