modification of properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=ORG_PROJECT
-sonar.organization=ORG
+sonar.projectKey=R-Christina_Moustass-video-christina
+sonar.organization=r-christina  
 
 sonar.sources=auth
 sonar.tests=auth
