--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,5 @@ sonar.projectKey=R-Christina_Moustass-video-christina
 sonar.organization=r-christina  
 
 sonar.sources=auth
-sonar.tests=auth
+sonar.tests=auth/tests
 sonar.javascript.lcov.reportPaths=auth/coverage/lcov.info
