--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=R-Christina_Moustass-video-christina
 sonar.organization=r-christina  
 
-sonar.sources=auth/src
-sonar.tests=auth/tests
+sonar.sources=auth/src,user/src
+sonar.tests=auth/tests,user/tests
 sonar.javascript.lcov.reportPaths=auth/coverage/lcov.info
