--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,4 @@ sonar.organization=r-christina
 
 sonar.sources=auth/src,user/src
 sonar.tests=auth/tests,user/tests
-sonar.javascript.lcov.reportPaths=auth/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=auth/coverage/lcov.info,user/coverage/lcov.info
