--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,12 @@ services:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
 
   auth:
     build: ./auth
@@ -34,7 +40,8 @@ services:
     env_file:
       - auth/.env
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
 
   user:
     build: ./user
@@ -43,8 +50,10 @@ services:
     env_file:
       - user/.env
     depends_on:
-      - mysql
-      - vault
+      mysql:
+        condition: service_healthy
+      vault:
+        condition: service_started
 
   front:
     image: node:20-alpine
@@ -58,15 +67,16 @@ services:
       - auth
 
   vault:
-    image: vault:1.14.3
+    image: hashicorp/vault:1.14.1
     ports:
-      - "8200:8200"
+      - "8201:8200"      # port host différent
     environment:
-      VAULT_ADDR: http://127.0.0.1:8200
-    command: server -config=/vault/config/vault-config.hcl
+      VAULT_DEV_ROOT_TOKEN_ID: root
     volumes:
-      - ./vault/config:/vault/config
       - vault-data:/vault/file
+    command: server -dev -dev-root-token-id=root
+
+
 
 volumes:
   mysql-data:
