--- a/user/dockerfile
+++ b/user/dockerfile
@@ -1,10 +1,10 @@
 FROM node:20-alpine
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install --production
+RUN npm install
 
 COPY . .
 
