--- a/user/package.json
+++ b/user/package.json
@@ -5,7 +5,7 @@
   "directories": {
     "test": "tests"
   },
- "scripts": {
+  "scripts": {
     "test": "jest --coverage"
   },
   "keywords": [],
@@ -13,8 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.6",
     "crypto": "^1.0.1",
     "express": "^5.2.1",
+    "express-session": "^1.19.0",
     "mysql2": "^3.16.1",
     "node-vault": "^0.10.9"
   },
